cmake_minimum_required(VERSION 3.26)
project(abc)

add_executable(A 370/A.cpp)
add_executable(B 370/B.cpp)
add_executable(C 370/C.cpp)
add_executable(128C 128/C_Switches.cpp)
add_executable(106B 106/B.cpp)
add_executable(122B 122/B.cpp)
add_executable(095C 095/C.cpp)
add_executable(abc002_4 002/abc002_4.cpp)
add_executable(abc145_c 145/abc145_c.cpp)
add_executable(abc150_c 150/abc150_c.cpp)
add_executable(abc371_a 371/abc371_a.cpp)
add_executable(abc371_b 371/abc371_b.cpp)
add_executable(abc371_d 371/abc371_d.cpp)
add_executable(abc372_a 372/abc372_a.cpp)
add_executable(abc372_b 372/abc372_b.cpp)
add_executable(abc372_c 372/abc372_c.cpp)
add_executable(abc372_d 372/abc372_d.cpp)
add_executable(arc084_a 077/arc084_a.cpp)
add_executable(arc084_a_2 077/arc084_a_2.cpp)
add_executable(arc084_a_giveup 077/arc084_a_giveup.cpp)
add_executable(abc023_d 023/abc023_d.cpp)
add_executable(abc373_a 373/abc373_a.cpp)
add_executable(abc373_b 373/abc373_b.cpp)
add_executable(abc373_c 373/abc373_c.cpp)
add_executable(abc373_d 373/abc373_d.cpp)
add_executable(abc374_a 374/abc374_a.cpp)
add_executable(abc374_b 374/abc374_b.cpp)
add_executable(abc374_c 374/abc374_c.cpp)
add_executable(abc374_d 374/abc374_d.cpp)
add_executable(abc138_d 138/abc138_d.cpp)
add_executable(abc138_d_giveup 138/abc138_d_giveup.cpp)
add_executable(abc375_a 375/abc375_a.cpp)
add_executable(abc375_b 375/abc375_b.cpp)
add_executable(abc375_c 375/abc375_c.cpp)
add_executable(abc376_a 376/abc376_a.cpp)
add_executable(abc376_b 376/abc376_b.cpp)
add_executable(abc376_c 376/abc376_c.cpp)
add_executable(abc376_d 376/abc376_d.cpp)
add_executable(abc376_d_bfs 376/abc376_d_bfs.cpp)
