cmake_minimum_required(VERSION 3.26)

project(others)
add_executable(pakencamp-2019-day3_C pakencamp-2019-day3/C.cpp)
add_executable(sumitrust2019_D sumitrust2019/D.cpp)
add_executable(2007-ho-3 JOI/2007-ho-3.cpp)
add_executable(2007-ho-3-2 JOI/2007-ho-3-2.cpp)
add_executable(s8pc_6_b s8pc-6/s8pc_6_b.cpp)
