cmake_minimum_required(VERSION 3.26)

project(others)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(pakencamp-2019-day3_C pakencamp-2019-day3/C.cpp)
add_executable(sumitrust2019_D sumitrust2019/D.cpp)
add_executable(2007-ho-3 JOI/2007-ho-3.cpp)
add_executable(2007-ho-3-2 JOI/2007-ho-3-2.cpp)
add_executable(s8pc_6_b s8pc-6/s8pc_6_b.cpp)
add_executable(joi2008yo_d JOI/joi2008yo/joi2008yo_d.cpp)
add_executable(joi2008yo_e JOI/joi2008yo/joi2008yo_e.cpp)
add_executable(s8pc_4_b s8pc-4/s8pc_4_b.cpp)
add_executable(joi2009ho_b JOI/joi2009ho/joi2009ho_b.cpp)
add_executable(joi2008ho_c JOI/joi2008ho/joi2008ho_c.cpp)
add_executable(joi2008ho_c_giveup JOI/joi2008ho/joi2008ho_c_giveup.cpp)
add_executable(joi2009yo_d JOI/joi2009yo/joi2009yo_d.cpp)
add_executable(joi2011yo_e JOI/joi2011yo/joi2011yo_e.cpp)
add_executable(joi2011yo_d JOI/joi2011yo/joi2011yo_d.cpp)
add_executable(joi2012yo_d JOI/joi2012yo/joi2012yo_d.cpp)
